[package]
name = "fuzzy-linker"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
indicatif = {version = "*", features = ["rayon"]}
levenshtein = "1.0.5"
rayon = "1.5.1"
serde = { version = "1.0", features = ["derive"] }
structopt = "0.3.23"
vpsearch = "2.0.1"